# oeliks-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: action.yml  docker-image.yml
api/: auth.py  const.py  models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
api/management/commands/: createdata.py  seed.sql  seed_db.py
api/migrations/: 0001_initial.py  0002_ad.py  0002_advertisement_delete_ad_alter_user_managers.py  0002_alter_user_first_name_alter_user_last_name.py  0003_adimage.py  0003_alter_user_phone.py  0003_rename_aboute_ad_about_and_more.py  0004_alter_adimage_image_teleauth.py  0005_user_tg_id.py  0006_delete_teleauth.py  0007_alter_adimage_ad.py  0008_alter_adimage_ad.py  0009_rename_about_advertisement_description.py  0010_section_category.py
api/tests/: test_client.py  test_ping.py
core/: __init__.py  celery.py  settings.py  urls.py  utility.py
core/settings/: common.py  dev.py  prod.py
locale/en/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.po
logs/: log.log.example
scripts/: run.bat  run.sh  setup.bat  setup.sh
test/: test_owm_api.py  test_samsara_api.py
